--- a/index.html
+++ b/index.html
@@ -3,27 +3,52 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Download GitHub Extensions</title>
+<title>GitHub Extensions Gallery</title>
 <style>
   body {
     margin: 0;
     background-color: black;
+    color: white;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+  }
+  .extension-card {
+    background-color: #222;
+    border-radius: 8px;
+    width: 280px;
+    padding: 15px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    gap: 15px;
-    font-family: Arial, sans-serif;
+  }
+  .thumbnail {
+    width: 100%;
+    height: 160px;
+    object-fit: contain;
+    border-radius: 6px;
+    background-color: #111;
+    margin-bottom: 12px;
+  }
+  .description {
+    font-size: 14px;
+    margin-bottom: 12px;
+    white-space: pre-wrap;
+    min-height: 80px;
   }
   button {
     background-color: white;
     color: black;
     border: none;
-    padding: 15px 30px;
+    padding: 12px 20px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+    width: 100%;
     transition: background-color 0.3s ease;
   }
   button:hover {
@@ -34,39 +59,95 @@
 <body>
 
 <script>
-  const owner = "CryoFrozen";  // Replace with GitHub username/org
-  const repo = "CryoExtensions";       // Replace with repo name
-  const folderPath = "extensions"; // Folder path in repo
+  const owner = "username";  // Replace with your GitHub username/org
+  const repo = "repo";       // Replace with your GitHub repo name
+  const folderPath = "extensions";  // Root folder containing extension folders
+
+  async function fetchJson(url) {
+    const res = await fetch(url);
+    if (!res.ok) throw new Error(`HTTP error ${res.status}`);
+    return res.json();
+  }
+
+  async function fetchText(url) {
+    const res = await fetch(url);
+    if (!res.ok) throw new Error(`HTTP error ${res.status}`);
+    return res.text();
+  }
 
   async function loadExtensions() {
     const apiUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${folderPath}`;
-    
     try {
-      const response = await fetch(apiUrl);
-      if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+      const folders = await fetchJson(apiUrl);
 
-      const files = await response.json();
-      files.forEach(file => {
-        if (file.type === "file") {
+      // Filter only folders (GitHub API type 'dir')
+      const extensionFolders = folders.filter(item => item.type === "dir");
+
+      for (const folder of extensionFolders) {
+        // Get contents inside each extension folder
+        const folderContents = await fetchJson(folder.url);
+
+        // Find required files inside the folder
+        const jsFile = folderContents.find(f => f.name.endsWith(".js"));
+        const txtFile = folderContents.find(f => f.name.endsWith(".txt"));
+        const thumbFile = folderContents.find(f => f.name.toLowerCase() === "thumbnail.png");
+
+        // Fetch description text if available
+        let description = "No description available.";
+        if (txtFile) {
+          try {
+            description = await fetchText(txtFile.download_url);
+          } catch {
+            // ignore error, keep default description
+          }
+        }
+
+        // Create card elements
+        const card = document.createElement("div");
+        card.className = "extension-card";
+
+        // Thumbnail
+        if (thumbFile) {
+          const img = document.createElement("img");
+          img.className = "thumbnail";
+          img.src = thumbFile.download_url;
+          img.alt = `${folder.name} thumbnail`;
+          card.appendChild(img);
+        }
+
+        // Description
+        const descEl = document.createElement("div");
+        descEl.className = "description";
+        descEl.textContent = description;
+        card.appendChild(descEl);
+
+        // Download button for the JS file
+        if (jsFile) {
           const btn = document.createElement("button");
-          btn.textContent = `Download ${file.name}`;
+          btn.textContent = `Download ${jsFile.name}`;
           btn.onclick = () => {
             const link = document.createElement('a');
-            link.href = file.download_url; // Direct file download URL
-            link.download = file.name;
+            link.href = jsFile.download_url;
+            link.download = jsFile.name;
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
           };
-          document.body.appendChild(btn);
+          card.appendChild(btn);
+        } else {
+          const noJs = document.createElement("p");
+          noJs.textContent = "No .js file found.";
+          card.appendChild(noJs);
         }
-      });
-    } catch (err) {
-      console.error("Failed to load extensions:", err);
-      const errMsg = document.createElement("p");
-      errMsg.textContent = "Failed to load extensions. See console for details.";
-      errMsg.style.color = "white";
-      document.body.appendChild(errMsg);
+
+        document.body.appendChild(card);
+      }
+    } catch (error) {
+      console.error("Error loading extensions:", error);
+      const errorMsg = document.createElement("p");
+      errorMsg.style.color = "red";
+      errorMsg.textContent = `Failed to load extensions: ${error.message}`;
+      document.body.appendChild(errorMsg);
     }
   }
 
