--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
 
 <script>
-  const owner = "username";  // Replace with your GitHub username/org
-  const repo = "repo";       // Replace with your GitHub repo name
+  const owner = "CryoFrozen";  // Replace with your GitHub username/org
+  const repo = "CryoExtensions";       // Replace with your GitHub repo name
   const folderPath = "extensions";  // Root folder containing extension folders
 
   async function fetchJson(url) {
